# free-claude-code

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
providers/open_router/: client.py  request.py
tests/providers/: test_open_router.py
