[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free-claude-code"
version = "0.1.0"
description = "A free, open-source alternative to Claude Code using various AI providers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "free-claude-code contributors" },
]
keywords = ["claude", "ai", "coding-assistant", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "google-generativeai>=0.7.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
free-claude-code = "free_claude_code.cli:main"
fcc = "free_claude_code.cli:main"

[project.urls]
Homepage = "https://github.com/free-claude-code/free-claude-code"
Repository = "https://github.com/free-claude-code/free-claude-code"
Issues = "https://github.com/free-claude-code/free-claude-code/issues"

[tool.hatch.build.targets.wheel]
packages = ["free_claude_code"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["free_claude_code"]

[tool.mypy]
python_version = "3.11"
# Relaxing strict mode for personal use — too noisy when experimenting
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov-report=xml locally — I don't use CI coverage uploads
# Also skipping coverage for now while I'm actively hacking on things
addopts = "-v --cov=free_claude_code --cov-report=term-missing --cov-fail-under=0"

[tool.coverage.run]
source = ["free_claude_code"]
omit = ["tests/*", "*/__init__.py"]
